2008-01-23  Tor Lillqvist  <tml@novell.com>

	* file-chooser/gtkfilesystemgnomevfs.c
	(gtk_file_system_gnome_vfs_volume_mount): No
	gnome_vfs_drive_mount() on Win32, at least for now, so bypass this
	function and call g_warning() on Win32.

2008-01-22  Tor Lillqvist  <tml@novell.com>

	* libgnomeui-zip.in: Look for catalogs in share/locale first, as
	that is where they will be with a properly built GNU gettext.

2008-01-16  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: 
	* configure.in: Small cleanups.

2008-01-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Post release bump.

===================== 2.21.x ======================

2008-01-14  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update
	* configure.in: 2.21.5.

2008-01-14  Carlos Garnacho  <carlos@imendio.com>

	* file-chooser/gtkfilesystemgio.[ch]: Add Gio GtkFileSystem
	implementation. #509262
	* configure.in, file-chooser/Makefile.am: Add autofoo.

2008-01-05  Kjartan Maraas  <kmaraas@gnome.org>

	* file-chooser/gtkfilesystemgnomevfs.c:
	(gtk_file_system_gnome_vfs_insert_bookmark):
	* libgnomeui/gnome-pixmap.c: (gnome_pixmap_new_from_file_at_size),
	(gnome_pixmap_load_file_at_size): Init all GError's to NULL.

2007-12-20  Christian Persch  <chpe@gnome.org>

	* libgnomeui/gnome-stock-icons.c:
	* libgnomeui/gnome-ui-init.c: Mark _gnome_stock_icons_init with
	G_GNUC_INTERNAL.

2007-12-20  Christian Persch  <chpe@gnome.org>

	* libgnomeui/gnome-thumbnail.c: (gnome_thumbnail_factory_lookup),
	(gnome_thumbnail_factory_has_valid_failed_thumbnail),
	(gnome_thumbnail_factory_save_thumbnail),
	(gnome_thumbnail_factory_create_failed_thumbnail): Adapt to new API
	for g_checksum_get_digest.

2007-12-15  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* libgnomeui/gnome-thumbnail.c: (gnome_thumbnail_factory_lookup),
	(gnome_thumbnail_factory_has_valid_failed_thumbnail),
	(gnome_thumbnail_factory_save_thumbnail),
	(gnome_thumbnail_factory_create_failed_thumbnail),