@@ -20,8 +20,13 @@ INCLUDES =					\
 module_flags = -export_dynamic -avoid-version -module -no-undefined
 modulesdir = $(libdir)/gtk-2.0/$(GTK_BINARY_VERSION)/filesystems
 
-modules_LTLIBRARIES =				\
-	libgnome-vfs.la			\
+if OS_WIN32
+else
+libgnome_vfs = libgnome-vfs.la
+endif
+
+modules_LTLIBRARIES =			\
+	$(libgnome_vfs)			\
 	libgio.la			\
 	$(NULL)
 
