@@ -1,3 +1,11 @@
+2008-01-25  Tor Lillqvist  <tml@novell.com>
+
+	* libgnomeui-zip.in: Use @GTK_BINARY_VERSION@ instead of
+	hardcoding. Don't try to package pixmaps no longer present.
+
+	* file-chooser/Makefile.am: Don't bother building libgnome-vfs.la
+	on Windows.
+
 2008-01-23  Tor Lillqvist  <tml@novell.com>
 
 	* file-chooser/gtkfilesystemgnomevfs.c
